--- a/src/lk/ccns/d24/view/DashBoardForm.fxml
+++ b/src/lk/ccns/d24/view/DashBoardForm.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -47,11 +51,16 @@
       </AnchorPane>
       <VBox layoutY="63.0" prefHeight="719.0" prefWidth="211.0" style="-fx-background-color: #22a6b3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="63.0">
          <children>
-            <Pane prefHeight="111.0" prefWidth="211.0">
+            <Pane prefHeight="146.0" prefWidth="211.0">
                <children>
-                  <Label fx:id="lbluserName" layoutX="78.0" layoutY="84.0" prefHeight="27.0" prefWidth="56.0" text="supun" textOverrun="CLIP">
+                  <Label fx:id="lblUserName" alignment="CENTER" layoutX="13.0" layoutY="91.0" prefHeight="20.0" prefWidth="183.0" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
                      <font>
-                        <Font name="System Bold" size="18.0" />
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblEmail" alignment="CENTER" layoutX="14.0" layoutY="118.0" prefHeight="20.0" prefWidth="183.0" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                   <Pane layoutX="65.0" layoutY="7.0" onMouseClicked="#userUpdateOnAction" prefHeight="78.0" prefWidth="78.0" style="-fx-background-color: white; -fx-background-radius: 100; -fx-border-radius: 100;">
@@ -139,7 +148,7 @@
             </Pane>
          </children>
       </VBox>
-      <AnchorPane fx:id="dashBoardMainAP" layoutX="211.0" layoutY="63.0" prefHeight="200.0" prefWidth="200.0" styleClass="body" stylesheets="@asset/stylesheet/styleSheetForDashBoard.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="211.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="63.0">
+      <AnchorPane fx:id="dashBoardMainAP" layoutX="211.0" layoutY="63.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" styleClass="body" stylesheets="@asset/stylesheet/styleSheetForDashBoard.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="211.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="63.0">
          <children>
             <Pane prefHeight="43.0" prefWidth="939.0" style="-fx-background-color: #FDA7DF;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -150,20 +159,20 @@
                   </Label>
                </children>
             </Pane>
-            <PieChart fx:id="availableQTYPieChart" layoutX="417.0" layoutY="58.0" prefHeight="409.0" prefWidth="507.0" style="-fx-background-color: #fdfff5; -fx-background-radius: 30; -fx-font-size: 14;" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="58.0" />
+            <PieChart fx:id="availableQTYPieChart" layoutX="417.0" layoutY="58.0" prefHeight="409.0" prefWidth="507.0" style="-fx-background-color: #fff0fc; -fx-background-radius: 30; -fx-font-size: 14;" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="58.0" />
             <Label layoutX="568.0" layoutY="68.0" text="Available Room QTY">
                <font>
                   <Font name="System Bold Italic" size="22.0" />
                </font>
             </Label>
-            <Pane layoutX="22.0" layoutY="493.0" prefHeight="212.0" prefWidth="654.0" style="-fx-background-color: #fdfff5; -fx-background-radius: 30;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="22.0">
+            <Pane layoutX="22.0" layoutY="493.0" prefHeight="212.0" prefWidth="654.0" style="-fx-background-color: #fff0fc; -fx-background-radius: 30;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="22.0">
                <children>
                   <Label layoutX="143.0" layoutY="14.0" text="Remaining Keymoney Student">
                      <font>
                         <Font name="System Bold Italic" size="22.0" />
                      </font>
                   </Label>
-                  <ListView fx:id="keyMoneyStudentListview" layoutX="24.0" layoutY="53.0" prefHeight="139.0" prefWidth="608.0" style="-fx-background-color: #fdfff5; -fx-font-size: 18; -fx-background-radius: 30; -fx-border-radius: 30;" />
+                  <ListView fx:id="keyMoneyStudentListview" layoutX="24.0" layoutY="53.0" prefHeight="139.0" prefWidth="608.0" style="-fx-background-color: #fff0fc; -fx-font-size: 18; -fx-background-radius: 30; -fx-border-radius: 30;" />
                </children>
             </Pane>
             <ImageView fitHeight="444.0" fitWidth="367.0" layoutX="22.0" layoutY="44.0" pickOnBounds="true">
@@ -196,12 +205,109 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="lblkeymoneyStudent" layoutX="252.0" layoutY="263.0" prefHeight="88.0" prefWidth="7.0" textFill="RED">
+            <Label fx:id="lblKeyMoneyStudent" layoutX="252.0" layoutY="263.0" prefHeight="88.0" prefWidth="7.0" textFill="RED">
                <font>
                   <Font size="50.0" />
                </font>
             </Label>
             <Separator layoutX="169.0" layoutY="218.0" orientation="VERTICAL" prefHeight="151.0" prefWidth="7.0" />
+            <Pane fx:id="mangeUserPane" layoutX="217.0" layoutY="36.0" prefHeight="569.0" prefWidth="442.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-border-color: black; -fx-border-radius: 15;">
+               <children>
+                  <JFXTextField fx:id="txtUserName" focusColor="#073fe6" labelFloat="true" layoutX="41.0" layoutY="119.0" onKeyReleased="#userNameKeyReleasedOnAction" prefHeight="51.0" prefWidth="342.0" promptText="User Name" style="-fx-font-color: black;" unFocusColor="BLACK">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </JFXTextField>
+                  <JFXTextField fx:id="txtShowPassword" focusColor="#073fe6" layoutX="41.0" layoutY="214.0" prefHeight="51.0" prefWidth="342.0" style="-fx-font-color: black;" unFocusColor="BLACK">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </JFXTextField>
+                  <JFXTextField fx:id="txtShowRePassword" focusColor="#073fe6" layoutX="41.0" layoutY="301.0" prefHeight="51.0" prefWidth="342.0" style="-fx-font-color: black;" unFocusColor="BLACK">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </JFXTextField>
+                  <Label layoutX="121.0" layoutY="50.0" prefHeight="45.0" prefWidth="183.0" text="Update User">
+                     <font>
+                        <Font name="System Bold" size="28.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="35.0" fitWidth="111.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" smooth="false">
+                     <image>
+                        <Image url="@asset/logo/d24_logo.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="36.0" fitWidth="36.0" layoutX="388.0" layoutY="23.0" onMouseClicked="#closeManageUserPaneOnAction" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@asset/stylesheet/icon/icons8-close-48.png" />
+                     </image>
+                  </ImageView>
+                  <JFXTextField fx:id="txtEmail" focusColor="#073fe6" labelFloat="true" layoutX="41.0" layoutY="398.0" onKeyReleased="#emailKeyReleasedOnAction" prefHeight="51.0" prefWidth="342.0" promptText="Email" style="-fx-font-color: black;" unFocusColor="BLACK">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </JFXTextField>
+                  <JFXPasswordField fx:id="txtPassword" labelFloat="true" layoutX="41.0" layoutY="214.0" onKeyReleased="#passwordKeyReleasedOnAction" prefHeight="51.0" prefWidth="342.0" promptText="Password">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </JFXPasswordField>
+                  <JFXPasswordField fx:id="txtRePassword" labelFloat="true" layoutX="41.0" layoutY="301.0" onKeyReleased="#passwordKeyReleasedOnAction" prefHeight="51.0" prefWidth="342.0" promptText="Re-Enter Password">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </JFXPasswordField>
+                  <ImageView fx:id="dontShowSigninPasswordIcon" fitHeight="36.0" fitWidth="36.0" layoutX="388.0" layoutY="230.0" onMouseClicked="#dontViewSigninPasswordOnAction" pickOnBounds="true" preserveRatio="true">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <image>
+                        <Image url="@asset/stylesheet/icon/showPassword.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="showSigninPasswordIcon" fitHeight="36.0" fitWidth="36.0" layoutX="388.0" layoutY="230.0" onMouseClicked="#viewSigninPasswordOnAction" pickOnBounds="true" preserveRatio="true">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <image>
+                        <Image url="@asset/stylesheet/icon/DontShowPassword.png" />
+                     </image>
+                  </ImageView>
+                  <JFXButton fx:id="btnUpdateUser" alignment="CENTER" buttonType="RAISED" layoutX="140.0" layoutY="486.0" onAction="#updateUserOnAction" prefHeight="51.0" prefWidth="162.0" styleClass="buttonSignup" stylesheets="@asset/stylesheet/styleForLoginForm.css" text="Update">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+               </children>
+            </Pane>
          </children></AnchorPane>
    </children>
 </AnchorPane>
