--- a/src/lk/ccns/d24/view/ManageReservationForm.fxml
+++ b/src/lk/ccns/d24/view/ManageReservationForm.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="reservationAP" prefHeight="719.0" prefWidth="939.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ccns.d24.controller.ManageReservationFormController">
+<AnchorPane fx:id="reservationAP" prefHeight="719.0" prefWidth="939.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ccns.d24.controller.ManageReservationFormController">
    <children>
       <Pane layoutX="-1.0" prefHeight="43.0" prefWidth="939.0" style="-fx-background-color: #FDA7DF; -fx-border-radius: 30; -fx-background-radius: 30;">
          <children>
@@ -23,7 +23,7 @@
             </Label>
          </children>
       </Pane>
-      <JFXTextField fx:id="txtReservationId" labelFloat="true" layoutX="91.0" layoutY="74.0" onKeyReleased="#keyReleasedOnAction" prefHeight="39.0" prefWidth="211.0" promptText="Reservation ID">
+      <JFXTextField fx:id="txtReservationId" labelFloat="true" layoutX="91.0" layoutY="74.0" onKeyReleased="#keyReleasedOnAction" prefHeight="39.0" prefWidth="211.0" promptText="Reservation ID (RS-###)">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -36,18 +36,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXComboBox>
-      <Pane layoutX="744.0" layoutY="431.0" onMouseClicked="#cleanTextFieldOnAction" prefHeight="43.0" prefWidth="105.0" style="-fx-background-color: #ff6b81; -fx-background-radius: 10;">
-         <children>
-            <Label layoutX="29.0" layoutY="8.0" prefHeight="27.0" prefWidth="48.0" text="Clean">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Pane>
       <Pane layoutX="91.0" layoutY="135.0" prefHeight="382.0" prefWidth="360.0" style="-fx-background-color: #b6effa; -fx-background-radius: 15;" AnchorPane.leftAnchor="90.0">
          <children>
             <Pane layoutX="245.0" layoutY="21.0" onMouseClicked="#addNewStudentOnAction" prefHeight="32.0" prefWidth="98.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 30; -fx-border-color: #2ed573; -fx-border-radius: 29;">
@@ -67,7 +55,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXComboBox>
-            <JFXTextField fx:id="txtName" labelFloat="true" layoutX="60.0" layoutY="91.0" prefHeight="30.0" prefWidth="213.0" promptText="Name">
+            <JFXTextField fx:id="txtName" editable="false" labelFloat="true" layoutX="60.0" layoutY="91.0" prefHeight="30.0" prefWidth="213.0" promptText="Name">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -75,7 +63,7 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
-            <JFXTextField fx:id="txtAddress" labelFloat="true" layoutX="60.0" layoutY="144.0" prefHeight="30.0" prefWidth="213.0" promptText="Address">
+            <JFXTextField fx:id="txtAddress" editable="false" labelFloat="true" layoutX="60.0" layoutY="144.0" prefHeight="30.0" prefWidth="213.0" promptText="Address">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -83,7 +71,7 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
-            <JFXTextField fx:id="txtContact" labelFloat="true" layoutX="60.0" layoutY="198.0" prefHeight="30.0" prefWidth="213.0" promptText="Contact">
+            <JFXTextField fx:id="txtContact" editable="false" labelFloat="true" layoutX="60.0" layoutY="198.0" prefHeight="30.0" prefWidth="213.0" promptText="Contact">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -91,7 +79,7 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
-            <JFXTextField fx:id="txtDOB" labelFloat="true" layoutX="60.0" layoutY="259.0" prefHeight="30.0" prefWidth="213.0" promptText="DOB">
+            <JFXTextField fx:id="txtDOB" editable="false" labelFloat="true" layoutX="60.0" layoutY="259.0" prefHeight="30.0" prefWidth="213.0" promptText="DOB">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -99,7 +87,7 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
-            <JFXTextField fx:id="txtGender" labelFloat="true" layoutX="60.0" layoutY="315.0" prefHeight="30.0" prefWidth="213.0" promptText="Gender">
+            <JFXTextField fx:id="txtGender" editable="false" labelFloat="true" layoutX="60.0" layoutY="315.0" prefHeight="30.0" prefWidth="213.0" promptText="Gender">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -111,7 +99,7 @@
       </Pane>
       <Pane layoutX="506.0" layoutY="135.0" prefHeight="272.0" prefWidth="360.0" style="-fx-background-color: #b6effa; -fx-background-radius: 15;" AnchorPane.rightAnchor="90.0">
          <children>
-            <JFXTextField fx:id="txtKeyMoney" labelFloat="true" layoutX="74.0" layoutY="205.0" prefHeight="30.0" prefWidth="213.0" promptText="Key Money">
+            <JFXTextField fx:id="txtKeyMoney" editable="false" labelFloat="true" layoutX="74.0" layoutY="205.0" prefHeight="30.0" prefWidth="213.0" promptText="Key Money">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -124,7 +112,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXComboBox>
-            <JFXTextField fx:id="txtQTY" labelFloat="true" layoutX="74.0" layoutY="146.0" prefHeight="30.0" prefWidth="213.0" promptText="Available QTY">
+            <JFXTextField fx:id="txtQTY" editable="false" labelFloat="true" layoutX="74.0" layoutY="146.0" prefHeight="30.0" prefWidth="213.0" promptText="Available QTY">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -132,7 +120,7 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
-            <JFXTextField fx:id="txtType" labelFloat="true" layoutX="74.0" layoutY="89.0" prefHeight="30.0" prefWidth="213.0" promptText="Type">
+            <JFXTextField fx:id="txtType" editable="false" labelFloat="true" layoutX="74.0" layoutY="89.0" prefHeight="30.0" prefWidth="213.0" promptText="Type">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -160,31 +148,22 @@
             <TableColumn fx:id="colStatus" prefWidth="151.0" text="Status" />
         </columns>
       </TableView>
-      <Pane layoutX="617.0" layoutY="431.0" onMouseClicked="#deleteReserveOnAction" prefHeight="43.0" prefWidth="105.0" style="-fx-background-color: #ff6b81; -fx-background-radius: 10;">
-         <children>
-            <Label layoutX="26.0" layoutY="8.0" prefHeight="27.0" prefWidth="57.0" text="Delete">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Pane>
-      <Pane layoutX="489.0" layoutY="431.0" onMouseClicked="#updateReserveOnAction" prefHeight="43.0" prefWidth="105.0" style="-fx-background-color: #ff6b81; -fx-background-radius: 10;">
-         <children>
-            <Label layoutX="22.0" layoutY="8.0" prefHeight="27.0" prefWidth="66.0" text="Update">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Pane>
       <JFXButton fx:id="btnAddReserve" layoutX="656.0" layoutY="489.0" onAction="#makeReserveOnAction" prefHeight="43.0" prefWidth="195.0" style="-fx-background-color: #4cd137; -fx-background-radius: 10;" text="Reserve">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btnUpdate" layoutX="489.0" layoutY="431.0" onAction="#updateReserveOnAction" prefHeight="43.0" prefWidth="105.0" style="-fx-background-color: #4cd137; -fx-background-radius: 10;" text="Update">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btnDelete" layoutX="617.0" layoutY="431.0" onAction="#deleteReserveOnAction" prefHeight="43.0" prefWidth="105.0" style="-fx-background-color: #4cd137; -fx-background-radius: 10;" text="Delete">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btnClear" layoutX="744.0" layoutY="431.0" onAction="#cleanTextFieldOnAction" prefHeight="43.0" prefWidth="105.0" style="-fx-background-color: #4cd137; -fx-background-radius: 10;" text="Clear">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
